feat: Correção feita em casa primeiro dia de serviço

--- a/html/bebida1.html
+++ b/html/bebida1.html
@@ -130,7 +130,7 @@
 
 <footer>
   <p>&copy; 2023 <a href="https://www.instagram.com/aguardentemalacrida/">Aguardente Malacrida</a></p>
-  <p>Desenvolvido por <a href="https://www.instagram.com/rafaa_per3z/">Rafael Perez</a></p>
+  <p>Desenvolvido por <a href="https://www.instagram.com/joaozinho_constante/">João Marcelo</a></p>
 </footer>
 
   <script src="../js/index.js"></script>
