--- a/html/bebida5.html
+++ b/html/bebida5.html
@@ -77,15 +77,15 @@
   </div>
 
     <section class="left">
-        <div class="bebida" style="background-image: url(../imagens/drink/melancia.jpg);">
+        <div class="bebida" style="background-image: url(../imagens/drink/bebida-de-limonada-fria-refrescante-caseira-de-verao-com-fatias-de-limao-hortela-e-gelo.jpg);">
 
         </div>
     </section>
 
     <section class="right">
         <div class="receita">
-            <h1>RASPADINHA DE MELANCIA</h1>
-            <p>Drink perfeito para sol e piscina</p>
+            <h1>LIMONADA AZUL</h1>
+            <p>equilíbrio perfeito entre gin, vermute e Campari, uma explosão de sabor em um simples gole.</p>
             <div class="listas">
                 <ul class="lista-ingredientes">
                     <h3>INGREDIENTES:</h3>
