--- a/index.html
+++ b/index.html
@@ -144,53 +144,60 @@ function showSlides() {
     <div class="square">
       <img src="imagens/drink/cha-gelado-com-hortela.jpg" alt="Imagem">
       <div class="overlay">
-        <h2>Título 3</h2>
-        <p>Texto de sobreposição 3</p>
+        <h2>CHÁ GELADO COM HORTELÃ</h2>
+        <p>Drink feito para acalmar os animos, depois de um dia longo de trabalho</p>
+        <a href="html/bebida2.html"><button id="receita">Saiba-mais</button></a>
       </div>
     </div>
     <div class="square">
       <img src="imagens/drink/negroni.jpeg" alt="Imagem">
       <div class="overlay">
-        <h2>Título 4</h2>
-        <p>Texto de sobreposição 4</p>
+        <h2>NEGRONI</h2>
+        <p>equilíbrio perfeito entre gin, vermute e Campari, uma explosão de sabor em um simples gole.</p>
+        <a href="html/bebida2.html"><button id="receita">Saiba-mais</button></a>
       </div>
     </div>
     <div class="square">
       <img src="imagens/drink/vista-frontal-limonada-fresca-azul-com-gelo-no-fundo-azul-agua-de-frutas-coquetel-frio-bebida-cor-suco.jpg" alt="Imagem">
       <div class="overlay">
-        <h2>Título 5</h2>
-        <p>Texto de sobreposição 5</p>
+        <h2>LIMONADA AZUL</h2>
+        <p>Você já tomou uma limonada azul??</p>
+        <a href="html/bebida2.html"><button id="receita">Saiba-mais</button></a>
       </div>
     </div>
     <div class="square">
       <img src="imagens/drink/DALL·E 2023-03-08 11.50.12 - crie uma foto de alta qualidade de uma drink.png" alt="Imagem">
       <div class="overlay">
-        <h2>Título 6</h2>
-        <p>Texto de sobreposição 6</p>
+        <h2>BEBIDA 6</h2>
+        <p>EM PRODUÇÃO</p>
+        <a href="html/bebida2.html"><button id="receita">Saiba-mais</button></a>
       </div>
     </div>
 
     <div class="square">
       <img src="imagens/drink/DALL·E 2023-03-08 11.49.54 - crie uma foto de alta qualidade de uma drink no tamanho de 1980 e 1080 pixels.png" alt="Imagem">
       <div class="overlay">
-        <h2>Título 7</h2>
-        <p>Texto de sobreposição 7</p>
+        <h2>BEBIDA 7</h2>
+        <p>EM PRODUÇÃO</p>
+        <a href="html/bebida2.html"><button id="receita">Saiba-mais</button></a>
       </div>
     </div>
   
       <div class="square">
         <img src="imagens/drink/DALL·E 2023-03-08 11.49.49 - crie uma foto de alta qualidade de uma drink no tamanho de 1980 e 1080 pixels.png" alt="Imagem">
         <div class="overlay">
-          <h2>Título 8</h2>
-          <p>Texto de sobreposição 8</p>
+          <h2>BEBIDA 8</h2>
+          <p>EM PRODUÇÃO</p>
+          <a href="html/bebida2.html"><button id="receita">Saiba-mais</button></a>
         </div>
       </div>
 
       <div class="square">
         <img src="imagens/drink/DALL·E 2023-03-08 11.49.37 - uma foto de alta resolução de um drink vermelho em uma taça bonita com morangos .png" alt="Imagem">
         <div class="overlay">
-          <h2>Título 9</h2>
-          <p>Texto de sobreposição 9</p>
+          <h2>BEBIDA 9</h2>
+          <p>EM PRODUÇÃO</p>
+          <a href="html/bebida2.html"><button id="receita">Saiba-mais</button></a>
         </div>
       </div>
 </section>
@@ -206,7 +213,7 @@ function showSlides() {
 
   <footer>
     <p>&copy; 2023 <a href="https://www.instagram.com/aguardentemalacrida/">Aguardente Malacrida</a></p>
-    <p>Desenvolvido por <a href="https://www.instagram.com/rafaa_per3z/">Rafael Perez</a></p>
+    <p>Desenvolvido por <a href="https://www.instagram.com/joaozinho_constante/">João Marcelo</a></p>
   </footer>
 
   <script src="js/index.js"></script>
