--- a/html/bebida3.html
+++ b/html/bebida3.html
@@ -77,15 +77,15 @@
   </div>
 
     <section class="left">
-        <div class="bebida" style="background-image: url(../imagens/drink/melancia.jpg);">
+        <div class="bebida" style="background-image: url(../imagens/drink/cha-gelado-com-hortela.jpg);">
 
         </div>
     </section>
 
     <section class="right">
         <div class="receita">
-            <h1>RASPADINHA DE MELANCIA</h1>
-            <p>Drink perfeito para sol e piscina</p>
+            <h1>CHÁ GELADO COM HORTELÃ</h1>
+            <p>Drink feito para acalmar os animos, depois de um dia longo de trabalho</p>
             <div class="listas">
                 <ul class="lista-ingredientes">
                     <h3>INGREDIENTES:</h3>
